--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ernest Izuchukwu Portfolio</title>
+		<title>Forty by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Portfolio</strong> <span>by Ernest Izuchukwu</span></a>
+						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -43,16 +43,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, My name is Ernest Izuchukwu</h1>
+								<h1>Hi, my name is Forty</h1>
 							</header>
 							<div class="content">
-								<p>I'M A SENIOR DATA ANALYST, WITH OVER 5 YEARS OF EXPERIENCE IN THE AUTOMOBILE,
-								 RETAIL, TECH AND EDUCATION INDUSTRIES. I POSSESS EXTENSIVE EXPERIENCE IN BUSINESS
-								  AND PEOPLE ANALYTICS WITH PROFICIENCY IN PYTHON, R, TABLEAU, POWER BI, AND ALL DIALECTS OF SQL.
-								   WHEN I'M NOT GENERATING INSIGHTS FROM BIG DATA, I'M TUTORING AND MENTORING A GROUP OF PROFESSIONAL
-								    DATA ANALYSTS  
+								<p>A responsive site template designed by HTML5 UP<br />
+								and released under the Creative Commons.</p>
 								<ul class="actions">
-									<li><a href="https://github.com/ernestdanalyst" class="button next scrolly">VIEW MY RESUME</a></li>
+									<li><a href="#one" class="button next scrolly">Get Started</a></li>
 								</ul>
 							</div>
 						</div>
@@ -68,11 +65,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Twitter API Query Using Tweppy</a></h3>
-										<p>I analaysed 5,000 tweets from twitter user @Dogs_rate. This project aims to 
-											show expertise in using python to gather data from a variety of 
-											sources; quering twitter's API with the TWEEPY LIBRARY AND ALSO USING THE REQUEST TO 
-										PROGRAMMATICALLY OBTAIN A FILE FROM THE INTERNET .</p>
+										<h3><a href="landing.html" class="link">Aliquam</a></h3>
+										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
 								<article>
@@ -80,10 +74,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Data Wrangling Using R and Tidyverse</a></h3>
-										<p>The dataset for this analysis contains daily and cumulative number of 
-											covid-19 test conducted , number of positive, hospitalized, recovered and death cases
-										reported by country. R Programming language and Tidyverse were used to clean and analyze the data. </p>
+										<h3><a href="landing.html" class="link">Tempus</a></h3>
+										<p>feugiat amet tempus</p>
 									</header>
 								</article>
 								<article>
@@ -91,11 +83,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Visualisation using Matplotlib & Seaborn</a></h3>
-										<p>Anlysis and visualisation of 54,000 diamonds to determine pointers to their 
-											pricing based on characteristics such as CARAT, CUT, CLARITY AND COLOR. This project uses 
-											both the Matplotlib and seaborn libraries and included both univariate and multivariate charset
-										depending on whether the variables are quantitaive or categorical.</p>
+										<h3><a href="landing.html" class="link">Magna</a></h3>
+										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
 								<article>
@@ -103,12 +92,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Itinrative Analysis with python</a></h3>
-										<p>Over 100,000 medical appointments in brazil were analysed to generate 
-											insights on factors infleuncing attendance. Variable's such as patient age, neighbourhood,
-											if patient received an sms reminder or if patient is enrolled in brazillian welfare
-											program Bolsa Familia , were all analyzed to find patterns and trends.
-										</p>
+										<h3><a href="landing.html" class="link">Ipsum</a></h3>
+										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
 								<article>
@@ -116,11 +101,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Web Scraping Using BeautifulSoup</a></h3>
-										<p>The UEFA Champions LEAGUE WIKIPEDAI PAGE WAS SCRAPED USING THE BEAUTIFULSOUP LIBRARY
-											AND "READ_HTML" FUNCTION OF THE PANDAS LIBRARY. DETAILS AND PLAYERS AND CLUBS WERE 
-											IMPORTED INTO A DATAFRAME FOR ANALYSIS WITH PYTHON. 
-										</p>
+										<h3><a href="landing.html" class="link">Consequat</a></h3>
+										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
 								<article>
@@ -128,10 +110,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Querying A database using PostgreSQL</a></h3>
-										<p>A brewery database was queried and analyzed using postgresql to figure out 
-											high performing teritorries ,profit generating countries, top performing brands and sales person, 
-										and low reach region. Data Querying Language (DQL) WAS USED EXTENSIVELY COUPLED WITH ADVANCED SQL LANGUAGE.</p>
+										<h3><a href="landing.html" class="link">Etiam</a></h3>
+										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
 							</section>
@@ -140,15 +120,11 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>PowerBI DashBoards and Visualisations</h2>
+										<h2>Massa libero</h2>
 									</header>
-									<p>Stakeholders are mostly concerned with insights, and it's been proven that insights are better understood
-										 with visuals than with numbers. For this reason, I have studied extensively on the appropriate chart
-										  types suitable for a variety of audience and the perculiarity of the insight to be communicated. 
-										  The link below contain dashboards ranging from Medical and Health data, to Retail and Sales data.
-										</p>
+									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
-										<li><a href="https://app.powerbi.com/groups/me/list" class="button next">View Dashboards</a></li>
+										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
 							</section>
@@ -185,23 +161,23 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">ernestizu@gmail.com </a>
+										<a href="#">information@untitled.tld</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(+234) 706 7610 636</span>
+										<span>(000) 000-0000 x12387</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
-										<h3>Address,</h3>
-										<span>900231,<br />
-										Abuja-FCT,<br />
-										Nigeria.</span>
+										<h3>Address</h3>
+										<span>1234 Somewhere Road #5432<br />
+										Nashville, TN 00000<br />
+										United States of America</span>
 									</div>
 								</section>
 							</section>
@@ -212,14 +188,14 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://twitter.com/Moonlight17BC" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/ernestdanalyst" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/izuchukwu-ernest-817488a5" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; https://medium.com/@dataforallweb</li><li>Design: <a href="https://medium.com/@dataforallweb">Ernest Izuchukwu</a></li>
+								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
