--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<h1>Hi, my name is Ernest Izuchukwu</h1>
 							</header>
 							<div class="content">
-								<p>M A SENIOR DATA ANALYST, WITH OVER 5 YEARS OF EXPERIENCE IN THE AUTOMOBILE,
+								<p> I aM A SENIOR DATA ANALYST, WITH OVER 5 YEARS OF EXPERIENCE IN THE AUTOMOBILE,
 									RETAIL, TECH AND EDUCATION INDUSTRIES. I POSSESS EXTENSIVE EXPERIENCE IN BUSINESS
 									 AND PEOPLE ANALYTICS WITH PROFICIENCY IN PYTHON, R, TABLEAU, POWER BI, AND ALL DIALECTS OF SQL.
 									  WHEN I'M NOT GENERATING INSIGHTS FROM BIG DATA, I'M TUTORING AND MENTORING A GROUP OF PROFESSIONAL
@@ -140,7 +140,7 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>PowerBI DashBoards and Nice Visualisations</h2>
+										<h2>PowerBI DashBoards and Visualisations</h2>
 									</header>
 									<p> Stakeholders are mostly concerned with insights, and it's been proven that insights are better understood
 										with visuals than with numbers. For this reason, I have studied extensively on the appropriate chart
