--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Portfolio</strong> <span>by Ernest Izuchukwu</span></a>
+						<a href="ernest's portfolio" class="logo"><strong>Portfolio</strong> <span>by Ernest Izuchukwu</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
