--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									   DATA ANALYSTS<br />
 								</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">View My Resume</a></li>
+									<li><a href="https://ernestdanalyst.github.io/portfolio/" class="button next scrolly">View My Resume</a></li>
 								</ul>
 							</div>
 						</div>
