--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 									   DATA ANALYSTS<br />
 								</p>
 								<ul class="actions">
-									<li><a href="https://ernestdanalyst.github.io/portfolio/" class="button next scrolly">View My Resume</a></li>
+									<li><a href="https://github.com/ernestdanalyst/portfolio/" 
+										class="button next scrolly">View My Resume</a></li>
 								</ul>
 							</div>
 						</div>
