--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 								<h1>Hi, my name is Ernest Izuchukwu</h1>
 							</header>
 							<div class="content">
-								<p> I aM A SENIOR DATA ANALYST, WITH OVER 5 YEARS OF EXPERIENCE IN THE AUTOMOBILE,
-									RETAIL, TECH AND EDUCATION INDUSTRIES. I POSSESS EXTENSIVE EXPERIENCE IN BUSINESS
-									 AND PEOPLE ANALYTICS WITH PROFICIENCY IN PYTHON, R, TABLEAU, POWER BI, AND ALL DIALECTS OF SQL.
-									  WHEN I'M NOT GENERATING INSIGHTS FROM BIG DATA, I'M TUTORING AND MENTORING A GROUP OF PROFESSIONAL
-									   DATA ANALYSTS<br />
+								<p> I am data analyst with 2 years of experience in the crypto industry where I have worked with Blockchain 
+									projects such as Covalent, Map Protocol, Metaxy, Instaraise, PhuturesDAO, Skaflic, Sil.Finance etc
+									With a good background in data analysis and a deep understanding of the blockchain ecosystem, 
+								I have proven a track record of providing valuable insights and recommendations to drive 
+									business growth and optimize performance in the fast-paced and dynamic world of cryptocurrencies.<br />
 								</p>
 								<ul class="actions">
 									<li><a href="https://github.com/ernestdanalyst/portfolio/" 
@@ -63,7 +63,7 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
+						<!-- One
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
@@ -135,7 +135,7 @@
 										  ADVANCED SQL LANGUAGE</p>
 									</header>
 								</article>
-							</section>
+							</section> -->
 
 						<!-- Two -->
 							<section id="two">
