--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
+				Header
 					<header id="header" class="alt">
-						<a href="ernest's portfolio" class="logo"><strong>Portfolio</strong> <span>by Ernest Izuchukwu</span></a>
+						<a href="ernest's portfolio" class="logo"><strong>Portfolio</strong> <span>
+							by Ernest Izuchukwu</span></a>
 						<nav>
-							<a href="#menu">Menu</a>
+							<!-- <a href="#menu">Menu</a> -->
 						</nav>
 					</header>
 
-				<!-- Menu -->
+				Menu
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="https://ernestdanalyst.github.io/portfolio/">Home</a></li>
 							<li><a href="landing.html">Landing</a></li>
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
@@ -39,22 +40,23 @@
 						</ul>
 					</nav>
 
-				<!-- Banner -->
+				Banner
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
 								<h1>Hi, my name is Ernest Izuchukwu</h1>
 							</header>
 							<div class="content">
-								<p> I am data analyst with 2 years of experience in the crypto industry where I have worked with Blockchain 
-									projects such as Covalent, Map Protocol, Metaxy, Instaraise, PhuturesDAO, Skaflic, Sil.Finance etc
+								<p>I am data analyst with 2 years of experience in the crypto industry where I have worked with Blockchain 
+									projects such as Covalent, Map Protocol, Metaxy, Instaraise, PhuturesDAO, Skaflic, Sil.Finance etc.
+
 									With a good background in data analysis and a deep understanding of the blockchain ecosystem, 
 								I have proven a track record of providing valuable insights and recommendations to drive 
-									business growth and optimize performance in the fast-paced and dynamic world of cryptocurrencies.<br />
+									business growth and optimize performance in any fast-paced and dynamic world of businesses or organisations.<br />
 								</p>
 								<ul class="actions">
-									<li><a href="https://github.com/ernestdanalyst/portfolio/" 
-										class="button next scrolly">View My Resume</a></li>
+									<li><a href="https://github.com/ernestdanalyst" 
+										class="button next scrolly">My Github link</a></li>
 								</ul>
 							</div>
 						</div>
@@ -143,12 +145,12 @@
 									<header class="major">
 										<h2>PowerBI DashBoards and Visualisations</h2>
 									</header>
-									<p> Stakeholders are mostly concerned with insights, and it's been proven that insights are better understood
-										with visuals than with numbers. For this reason, I have studied extensively on the appropriate chart
-										 types suitable for a variety of audience and the perculiarity of the insight to be communicated. 
-										 The link below contain dashboards ranging from Medical and Health data, to Retail and Sales data.</p>
+									<p> With its powerful data modeling capabilities, and a wide range of visualization options,
+										 Power BI allows to turn complex data sets into intuitive and actionable insights
+										 that can be shared with stakeholders across the organization. Herein are some of the visuals I created in the 
+										past.</p>
 									<ul class="actions">
-										<li><a href="https://www.novypro.com/profile_projects/ernestizuchukwu" class="button next">Get Started</a></li>
+										<li><a href="https://www.novypro.com/profile_projects/ernestizuchukwu" class="button next">View & Interact</a></li>
 									</ul>
 								</div>
 							</section>
@@ -215,7 +217,7 @@
 								<li><a href="https://twitter.com/Moonlight17BC" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
-								<li><a href="https://github.com/ernest-the-analyst" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/ernestdanalyst" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/izuchukwu-ernest-817488a5" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
