--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
 								<h1>Hi, my name is Ernest Izuchukwu</h1>
 							</header>
 							<div class="content">
-								<p>I am data analyst with 2 years of experience in the crypto industry where I have worked with Blockchain 
-									projects such as Covalent, Map Protocol, Metaxy, Instaraise, PhuturesDAO, Skaflic, Sil.Finance etc.
+								<p>I am data analyst. I have worked as a data officer with several organisations
+									especially in the blockchain space. Some of the blockchain projects I have worked 
+									are Covalent, Map Protocol, Metaxy, Instaraise, PhuturesDAO, Skaflic, Sil.Finance etc.
 
 									With a good background in data analysis and a deep understanding of the blockchain ecosystem, 
-								I have proven a track record of providing valuable insights and recommendations to drive 
+								I have a proven track record of providing valuable insights and recommendations to drive 
 									business growth and optimize performance in any fast-paced and dynamic world of businesses or organisations.<br />
 								</p>
 								<ul class="actions">
