--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">ernestizu@gmail.com</a>
 									</div>
 								</section>
 								<section>
@@ -202,7 +202,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>099362,<br />
+										<span>900107,<br />
 										Abuja, FCT,<br />
 										Nigeria.</span>
 									</div>
