--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 								<h1>Hi, my name is Ernest Izuchukwu</h1>
 							</header>
 							<div class="content">
-								<p>I am data analyst. I have worked as a data officer with several organisations
+								<p>I am A data analyst. I have worked as a data officer with several organisations
 									especially in the blockchain space. Some of the blockchain projects I have worked 
-									are Covalent, Map Protocol, Metaxy, Instaraise, PhuturesDAO, Skaflic, Sil.Finance etc.
+									are Covalent, Map Protocol, Metaxy, Instaraise, Skaflic, Sil.Finance etc.
 
 									With a good background in data analysis and a deep understanding of the blockchain ecosystem, 
 								I have a proven track record of providing valuable insights and recommendations to drive 
@@ -222,7 +222,7 @@
 								<li><a href="https://www.linkedin.com/in/izuchukwu-ernest-817488a5" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://medium.com/@dataforallweb">https://medium.com/@dataforallweb</a></li>
+								<li>&copy; ernestizu</li><li>Design: <a href="https://medium.com/@dataforallweb">https://medium.com/@dataforallweb</a></li>
 							</ul>
 						</div>
 					</footer>
